--- a/app/content/home/homeTemplate.html
+++ b/app/content/home/homeTemplate.html
@@ -1,1 +1,18 @@
-<h1>Home</h1>
+<div class="row">
+		
+		<div class="col-lg-3"></div>
+
+		<div class="col-lg-6">
+			<div class="input-group">
+				<input type="text" class="form-control search" placeholder="Poišči ustanovo...">
+					<span class="input-group-btn">
+						<button class="btn btn-default search" type="button">
+							<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+						</button>
+					</span>
+				</div><!-- /input-group -->
+		</div><!-- /.col-lg-6 -->
+		
+		<div class="col-lg-3"></div>
+	
+</div><!-- /.row -->
