--- a/index.html
+++ b/index.html
@@ -1,36 +1,31 @@
 <!doctype html>
 <html class="no-js" lang="">
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title></title>
-      <meta name="description" content="">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Vojf</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <link rel="stylesheet" href="public/css/bootstrap.min.css">
-      <style>
-          body {
-              padding-top: 50px;
-              padding-bottom: 20px;
-          }
-      </style>
-      <link rel="stylesheet" href="public/css/bootstrap-theme.min.css">
-      <link rel="stylesheet" href="public/css/main.css">
-  </head>
-  <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <link rel="stylesheet" href="public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="public/css/main.css">
+</head>
+    <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container margin-top-20">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">SigmaJs test project</a>
-      </div>
+          <div class="navbar-header">
+                <a class="navbar-brand" href="#">Vizualizacija omrežij javnih financ</a>
+          </div>
     </div>
-  </nav>
-  <div class="container padding-top-20">
+    </nav>
+    <div class="container padding-top-20">
+    <hr>
+    <!-- View -->    
     <div ng-view></div>
-  </div>
-  <hr>
-  </div>      
-
-  <script data-main="app/main" src="app/vendor/require.js"></script>
-  </body>
+    </div>
+    </div>      
+    
+    <script data-main="app/main" src="app/vendor/require.js"></script>
+    </body>
 </html>
