--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container margin-top-20">
           <div class="navbar-header">
-                <a class="navbar-brand" href="#">Vizualizacija omrežij javnih financ</a>
+                <a class="navbar-brand" href="#/home">Vizualizacija omrežij javnih financ</a>
           </div>
     </div>
     </nav>
     <div class="container padding-top-20">
-    <hr>
     <!-- View -->    
     <div ng-view></div>
     </div>
