homepage html improvements...

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </div>
     </div>
     </nav>
-    <div class="container padding-top-20">
+    <div class="container-full padding-top-20">
     <!-- View -->    
     <div ng-view></div>
     </div>
