--- a/app/content/home/homeTemplate.html
+++ b/app/content/home/homeTemplate.html
@@ -1,18 +1,41 @@
 <div class="space50"></div>
-<div class="row">
-				
+
+<div class="header">
+
+	<div class="row" style="margin:0">
 		<div class="col-sm-3"></div>
 		<div class="col-sm-6">
-			<div class="input-group">
-				<input type="text" class="form-control search" placeholder="Poišči ustanovo...">
-				<span class="input-group-btn">
-					<button class="btn btn-default search" onclick="location.href='#/mainGraph'" type="button">
-						<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-					</button>
-				</span>
+			<div id="search" class="input-group">
+					<input type="text" class="form-control search" placeholder="Poišči ustanovo...">
+					<span class="input-group-btn">
+						<button class="btn btn-default search" onclick="location.href='#/mainGraph'" type="button">
+							<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+						</button>
+					</span>
 			</div><!-- /input-group -->
 		</div><!-- /.col-lg-6 -->
 		<div class="col-sm-3"></div>
-	
-</div><!-- /.row -->
-<h1 class="centered-text">Izvirno ime aplikacije</h1>
+	</div>
+	<div class="row" style="margin:0">
+		<h1 class="centered-text">Grafični prikaz javnih transakcij</h1>
+	</div>
+
+</div>
+
+	<div class="row" style="float:none; margin: 0 auto">
+	    <div class="col-lg-4 col-center">
+			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="100" width="100">
+			<h4>Enostavno in hitro iskanje</h4>
+			<p></p>
+	    </div><!-- /.col-lg-4 -->
+	    <div class="col-lg-4 col-center">
+			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="100" width="100">
+			<h4>Javna osvetlitev toka denarja</h4>
+			<p></p>
+	    </div><!-- /.col-lg-4 -->
+	    <div class="col-lg-4 col-center">
+			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="100" width="100">
+			<h4>Časovna primerjava</h4>
+			<p></p>
+	    </div><!-- /.col-lg-4 -->
+	</div>
