--- a/app/content/home/homeTemplate.html
+++ b/app/content/home/homeTemplate.html
@@ -6,9 +6,9 @@
 		<div class="col-sm-3"></div>
 		<div class="col-sm-6">
 			<div id="search" class="input-group">
-					<input type="text" class="form-control search" placeholder="Poišči ustanovo...">
+					<input type="text" class="form-control search" placeholder="Poišči ustanovo..." ng-model="search">
 					<span class="input-group-btn">
-						<button class="btn btn-default search" onclick="location.href='#/mainGraph'" type="button">
+						<button class="btn btn-default search" ng-click="redirect()" type="button">
 							<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 						</button>
 					</span>
