--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     </div>
     </div>      
     
+    <footer class="footer">
+        <div class="container">
+            <p class="footer-text">&copy vojf</p>
+        </div>
+    </footer>
     <script data-main="app/main" src="app/vendor/require.js"></script>
     </body>
 </html>
