Screen 100% width fixed

--- a/app/content/home/homeTemplate.html
+++ b/app/content/home/homeTemplate.html
@@ -2,7 +2,7 @@
 
 <div class="header">
 
-	<div class="row" style="margin:0">
+	<div class="row">
 		<div class="col-sm-3"></div>
 		<div class="col-sm-6">
 			<div id="search" class="input-group">
@@ -22,7 +22,7 @@
 
 </div>
 
-	<div class="row" style="float:none; margin: 0 auto">
+	<div class="row">
 	    <div class="col-lg-4 col-center">
 			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="100" width="100">
 			<h4>Enostavno in hitro iskanje</h4>
