--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!doctype html>
 <html class="no-js" lang="">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Vojf</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Vojf</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="public/css/bootstrap.min.css">
-    <link rel="stylesheet" href="public/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="public/css/main.css">
-</head>
+        <link rel="stylesheet" href="public/css/bootstrap.min.css">
+        <link rel="stylesheet" href="public/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="public/css/main.css">
+    </head>
     <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container margin-top-20">
-          <div class="navbar-header">
-                <a class="navbar-brand" href="#/home">Vizualizacija omrežij javnih financ</a>
-          </div>
-    </div>
-    </nav>
-    <div class="container-full padding-top-20">
-    <!-- View -->    
-    <div ng-view></div>
-    </div>
-    </div>      
-    
-    <footer class="footer">
-        <div class="container">
-            <p class="footer-text">&copy vojf</p>
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container margin-top-20">
+              <div class="navbar-header">
+                    <a class="navbar-brand" href="#/home">Vizualizacija omrežij javnih financ</a>
+              </div>
         </div>
-    </footer>
-    <script data-main="app/main" src="app/vendor/require.js"></script>
+        </nav>
+        <div class="container padding-top-20">
+        <!-- View -->    
+        <div ng-view></div>
+        </div>
+        </div>      
+        
+        <!-- <footer class="footer">
+            <div class="container">
+                <p class="footer-text">&copy vojf</p>
+            </div>
+        </footer> -->
+        <script data-main="app/main" src="app/vendor/require.js"></script>
     </body>
 </html>
