--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
           </div>
     </div>
     </nav>
-    <div class="container-full padding-top-20">
+    <div class="container padding-top-20">
     <!-- View -->    
     <div ng-view></div>
     </div>
     </div>      
-    
+
+    <!--
     <footer class="footer">
         <div class="container">
             <p class="footer-text">&copy vojf</p>
         </div>
-    </footer>
+    </footer> -->
     <script data-main="app/main" src="app/vendor/require.js"></script>
     </body>
 </html>
