--- a/app/content/mainGraph/mainGraphTemplate.html
+++ b/app/content/mainGraph/mainGraphTemplate.html
@@ -16,21 +16,18 @@
             <button class="btn btn-default height45" ng-click="resetGraph()">Reset graph</button>
             <div class="space20"></div>
         </div>
-        <div class="row">
-            <ul class="list-group">
-                <li class="list-group-item list-group-item-info">
-                    Izbrano vozlišče: {{ activeNode.label }}
+        <div class="row" ng-show="activeNode">
+            <p href="#" class="list-group-item active">
+                {{ activeNode.label }} <span class="badge"> {{ neighbours.length }} </span>
+            </p>
+            <ul class="list-group scrollable">
                 </li>
-                <li class="list-group-item" ng-repeat="edge in neighbours">
-                    <span class="badge">€</span>
-                    {{ edge.label }}
+                <li class="list-group-item font-size-11" ng-repeat="object in neighbours" ng-click="findChoosedNode(object.node)">
+                    <span class="badge"> {{ object.edge.label|currency:"EUR: " }}</span>
+                    {{ object.node.label|uppercase }}
                 </li>
             </ul>
         </div>
-
-		<p>Trenutno izbrano vozlisce:<p>
-		<p>{{ activeNode.label }}</p>
-		<p>Sosedi izbranega vozlišča: </p>
 
 	</div>
 	<div class="col-md-9">
