--- a/app/content/mainGraph/mainGraphTemplate.html
+++ b/app/content/mainGraph/mainGraphTemplate.html
@@ -17,9 +17,9 @@
             <div class="space20"></div>
         </div>
         <div class="row" ng-show="activeNode">
-            <p href="#" class="list-group-item active">
+            <a href="#" class="list-group-item active">
                 {{ activeNode.label }} <span class="badge"> {{ neighbours.length }} </span>
-            </p>
+            </a>
             <ul class="list-group scrollable">
                 </li>
                 <li class="list-group-item font-size-11" ng-repeat="object in neighbours" ng-click="findChoosedNode(object.node)">
