--- a/app/content/mainGraph/mainGraphTemplate.html
+++ b/app/content/mainGraph/mainGraphTemplate.html
@@ -31,6 +31,6 @@
 
 	</div>
 	<div class="col-md-9">
-		<div id="graph-container"></div>
+		<graph-directive settings="settings" graph="graph" drawgraph="drawGraph"></graph-directive>
 	</div>
 </div>
