--- a/app/scripts/content/atlasGraph/atlasGraphTemplate.html
+++ b/app/scripts/content/atlasGraph/atlasGraphTemplate.html
@@ -8,22 +8,20 @@
                 <input type="text" class="form-control height45" placeholder="Poišči ustanovo..." ng-model="nodeId">
                 <span class="input-group-btn">
                     <button class="btn btn-default height45" ng-click="findNode()" type="button">
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-sarch" aria-hidden="true"></span>
                     </button>
                 </span>
             </div>
-            <div class="space5"></div>
-            <button class="btn btn-default height45" ng-click="resetGraph()">Reset graph</button>
             <div class="space20"></div>
         </div>
         <div class="row" ng-show="activeNode">
-            <p href="#" class="list-group-item active">
+            <a href="#" class="list-group-item active">
                 {{ activeNode.label }} <span class="badge"> {{ neighbours.length }} </span>
-            </p>
+            </a>
             <ul class="list-group scrollable">
                 </li>
-                <li class="list-group-item font-size-11" ng-repeat="object in neighbours" ng-click="findChoosedNode(object.node)">
-                    <span class="badge"> {{ object.edge.label|currency:"EUR: " }}</span>
+                <li class="list-group-item font-size-11" ng-repeat="object in neighbours" ng-click="findNodeById(object.node.id)">
+                    <span class="badge" style="background-color: {{object.color}}"> {{ object.edge.label|currency:"EUR: " }}</span>
                     {{ object.node.label|uppercase }}
                 </li>
             </ul>
@@ -31,6 +29,7 @@
         
 	</div>
 	<div class="col-md-9">
-		<div id="graph-container"></div>
+        <graph-directive settings="settings" graph="graph" drawgraph="drawGraph" findnodebyid="findNodeById"
+                         nodeid="nodeId" neighbours="neighbours" activenode="activeNode" forceatlas="forceAtlas"></graph-directive>
 	</div>
 </div>
