Implementation of categorized graph

--- a/app/scripts/content/categoryGraph/categoryGraphTemplate.html
+++ b/app/scripts/content/categoryGraph/categoryGraphTemplate.html
@@ -31,6 +31,6 @@
 	</div>
 	<div class="col-md-9">
 		<graph-directive settings="settings" graph="graph" drawgraph="drawGraph" findnodebyid="findNodeById" 
-                        nodeid="nodeId" neighbours="neighbours" activenode="activeNode"></graph-directive>
+                        nodeid="nodeId" neighbours="neighbours" activenode="activeNode" forceatlas="forceAtlas"></graph-directive>
 	</div>
 </div>
