--- a/app/scripts/content/categoryGraph/categoryGraphTemplate.html
+++ b/app/scripts/content/categoryGraph/categoryGraphTemplate.html
@@ -21,7 +21,7 @@
             </a>
             <ul class="list-group scrollable">
                 </li>
-                <li class="list-group-item font-size-11" ng-repeat="object in neighbours |  orderBy: 'edge.label'" ng-click="findNodeById(object.node.id)">
+                <li class="list-group-item font-size-11" ng-repeat="object in neighbours |  orderBy: 'node.label'" ng-click="findNodeById(object.node.id)">
                     <span class="badge" style="background-color: {{object.color}}"> {{ object.edge.label|currency:"EUR: " }}</span>
                     {{ object.node.label|uppercase }}
                 </li>
