--- a/app/scripts/directives/graphDirective/graphDirectiveTemplate.html
+++ b/app/scripts/directives/graphDirective/graphDirectiveTemplate.html
@@ -1,7 +1,7 @@
 <div>
 	<button class="btn btn-default height45" ng-click="resetGraph()">Reset graph</button>
 	<div id="graph-overlay" style="position:absolute; z-index:10; background-color: white" ng-hide="{{graphPrepared}}">
-		<img id="loader" src="/public/img/loader.gif"/>
+		<img id="loader" src="public/img/loader.gif"/>
 	</div>
 	<div id="graph-container"></div>
 </div>
