Search bar added

--- a/app/scripts/content/home/homeTemplate.html
+++ b/app/scripts/content/home/homeTemplate.html
@@ -25,18 +25,20 @@
 
 <div class="row">
     <div class="col-lg-4 col-center">
-		<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="100" width="100">
+		<span>
+			<i class="fa fa-search fa-big"></i>
+		</span>
 		<h4>Enostavno in hitro iskanje</h4>
 		<p></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4 col-center">
-		<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="100" width="100">
+		<span><i class="fa fa-money fa-big"></i></span>
 		<h4>Javna osvetlitev toka denarja</h4>
 		<p></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4 col-center">
-		<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="100" width="100">
-		<h4>Časovna primerjava</h4>
+		<span><i class="fa fa-archive fa-big"></i></span>
+		<h4>Kategorizacija</h4>
 		<p></p>
     </div><!-- /.col-lg-4 -->
 </div>
