--- a/app/scripts/content/mainGraph/mainGraphTemplate.html
+++ b/app/scripts/content/mainGraph/mainGraphTemplate.html
@@ -1,7 +1,8 @@
 <div class="row">
+    <search-directive settings="settings"></search-directive>
+
 	<div class="col-md-3">
         <div class="row">
-            <h1>Graf</h1>
             <div class="space20"></div>
 
             <div class="input-group">
