--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="content-type" content="text/html;charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Vojf</title>
         <meta name="description" content="">
@@ -9,19 +10,20 @@
 
         <link rel="stylesheet" href="public/css/bootstrap.min.css">
         <link rel="stylesheet" href="public/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="public/css/main.css">
     </head>
     <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container margin-top-20">
-          <div class="navbar-header">
-                <a class="navbar-brand" href="#/home">Vizualizacija omrežij javnih financ</a>
-          </div>
-    </div>
+        <div class="container margin-top-20">
+              <div class="navbar-header">
+                    <a class="navbar-brand" href="#/home">Vizualizacija omrežij javnih financ</a>
+              </div>
+        </div>
     </nav>
     <div class="container padding-top-20">
-    <!-- View -->    
-    <div ng-view></div>
+        <!-- View -->
+        <div ng-view></div>
     </div>
     <!--</div>-->
 
