--- a/app/scripts/content/mainGraph/mainGraphTemplate.html
+++ b/app/scripts/content/mainGraph/mainGraphTemplate.html
@@ -23,26 +23,8 @@
             <div class="space20"></div>
         
         </div>
-        <div class="row" ng-show="activeNode">
-            <a href="#" class="list-group-item active">
-                {{ activeNode.label }} <span class="badge"> {{ neighbours.length }} </span>
-            </a>
-            <ul class="list-group scrollable">
-
-                <li class="list-group-item font-size-11" ng-repeat="object in neighbours |  orderBy: 'edge.label'" ng-click="findNodeById(object.node.id)">
-                    <span class="badge" style="background-color: {{object.color}}"> {{ object.edge.label|currency:"EUR: " }}</span>
-                    {{ object.node.label|uppercase }}
-                </li>
-            </ul>
-        </div>
-        <div class="row" ng-hide="activeNode">
-            <ul class="legend">
-                <li ng-repeat="obj in legend track by $index" style="color: {{ obj.color }}" ng-click="showCategory($index)">
-                    <span>{{ obj.category }}</span>
-                </li>
-            </ul>
-        </div>
-
+        <active-node-directive></active-node-directive>
+    	<legend-directive></legend-directive>
 	</div>
 	<div class="col-md-9">
 		<graph-directive settings="settings" graph="graph" drawgraph="drawGraph" findnodebyid="findNodeById" 
