--- a/app/scripts/directives/searchDirective/searchDirectiveTemplate.html
+++ b/app/scripts/directives/searchDirective/searchDirectiveTemplate.html
@@ -9,30 +9,30 @@
 
 		<div class="form-inline pull-right">
 
-			<select class="form-control" id="year-part">
+			<select ng-model="filter.month" class="form-control" id="year-part">
 				<option value="" disabled selected >Četrtletje</option>
-				<option>Prvi kvartar</option>
-				<option>Drugi kvartar</option>
-				<option>Tretji kvartar</option>
-				<option>Četrti kvartar</option>
+				<option value="{monthFrom: 1, monthUntil: 3}">Prvi kvartar</option>
+				<option value="{monthFrom: 4, monthUntil: 6}">Drugi kvartar</option>
+				<option value="{monthFrom: 7, monthUntil: 9}">Tretji kvartar</option>
+				<option value="{monthFrom: 10, monthUntil: 12}">Četrti kvartar</option>
 			</select>
 
-			<select class="form-control" id="year">
+			<select ng-model="filter.year" class="form-control" id="year">
 				<option value="" disabled selected >Leto</option>
-				<option>2012</option>
-				<option>2013</option>
-				<option>2014</option>
+				<option value="2012">2012</option>
+				<option value="2013">2013</option>
+				<option value="2014">2014</option>
 			</select>
 
-			<select class="form-control" id="range">
+			<select ng-model="filter.amount" class="form-control" id="range">
 				<option value="" disabled selected >Velikost transakcije (EUR)</option>
-				<option>0 - 10000</option>
-				<option>10000 - 50000</option>
-				<option>50000 - 100000</option>
-				<option>več kot 100000</option>
+				<option value="{ maxAmount: 10000.00 }">0 - 10000</option>
+				<option value="{ minAmount: 10000.00, maxAmount: 50000.00 }">10000 - 50000</option>
+				<option value="{ minAmount: 50000.00, maxAmount: 100000.00 }">50000 - 100000</option>
+				<option value="{ minAmount: 100000.00 }">več kot 100000</option>
 			</select>
 
-			<button class="btn-success btn" onclick="alert('Waiting for API!');">Posodobi</button>
+			<button class="btn-success btn" ng-click="loadEdges()">Posodobi</button>
 
 		</div>
 
