--- a/app/scripts/content/mainGraph/mainGraphTemplate.html
+++ b/app/scripts/content/mainGraph/mainGraphTemplate.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <search-directive settings="settings"></search-directive>
+    <search-directive></search-directive>
 
 	<div class="col-md-3">
         <div class="row">
