--- a/app/scripts/directives/graphDirective/graphDirectiveTemplate.html
+++ b/app/scripts/directives/graphDirective/graphDirectiveTemplate.html
@@ -2,5 +2,7 @@
 	<div id="graph-overlay" style="position:absolute; z-index:10; background-color: white" ng-hide="{{graphPrepared}}">
 		<img id="loader" src="public/img/loader.gif"/>
 	</div>
-	<div id="graph-container"></div>
+	<div id="graph-container">
+		<div id="graph"></div>
+	</div>
 </div>
