--- a/app/scripts/directives/legendDirective/legendDirectiveTemplate.html
+++ b/app/scripts/directives/legendDirective/legendDirectiveTemplate.html
@@ -2,7 +2,7 @@
     <div class="row" ng-hide="activeNode">
         <ul class="legend">
             <li ng-repeat="obj in legend track by $index" style="color: {{ obj.color }}" ng-click="showCategory($index)">
-                <span>{{ obj.category }}</span>
+                <span>{{ obj.name }}</span>
             </li>
         </ul>
     </div>
