Autocomplete on first page...

--- a/app/scripts/content/home/homeTemplate.html
+++ b/app/scripts/content/home/homeTemplate.html
@@ -5,7 +5,13 @@
 	<div class="row">
 		<div class="col-sm-3"></div>
 		<div class="col-sm-6">
-			<div id="search" class="input-group">
+
+			<div class="space80"></div>
+			<div class="containter">
+				<autocomplete-directive></autocomplete-directive>
+			</div>
+
+			<!--<div id="search" class="input-group">
 					<input type="text" class="form-control search" placeholder="Poišči ustanovo..." ng-model="search">
 					<span class="input-group-btn">
 						<button class="btn btn-default search" ng-click="redirect()" type="button">
