--- a/app/scripts/content/mainGraph/mainGraphTemplate.html
+++ b/app/scripts/content/mainGraph/mainGraphTemplate.html
@@ -5,7 +5,15 @@
         <div class="row">
             <div class="space20"></div>
 
-                <autocomplete-directive></autocomplete-directive>
+                <div class="input-group autocomplete-containter">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default height45" ng-click="reset()" type="button">
+                            <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
+                        </button>
+                    </span>
+
+                    <autocomplete-directive></autocomplete-directive>
+                </div>
 
             <div class="space20"></div>
         </div>
