--- a/app/scripts/directives/autocompleteDirective/autocompleteDirectiveTemplate.html
+++ b/app/scripts/directives/autocompleteDirective/autocompleteDirectiveTemplate.html
@@ -1,12 +1,6 @@
-<div class="input-group autocomplete-containter">
+<div class="input-group">
 
-    <span class="input-group-btn">
-        <button class="btn btn-default height45" ng-click="reset()" type="button">
-            <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
-        </button>
-    </span>
-
-    <input type="text" ng-model="acSelected" placeholder="ključna beseda, matična, davčna, pu" typeahead="obj.name for obj in autocomplete($viewValue) | limitTo: 8"
+    <input type="text" ng-model="acSelected" placeholder="{{placeholder}}" typeahead="obj.name for obj in autocomplete($viewValue) | limitTo: 8"
            typeahead-on-select="onSelect($item)" typeahead-min-length="2"  typeahead-wait-ms="10" class="form-control height45">
     <i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
 
