--- a/app/scripts/directives/searchDirective/searchDirectiveTemplate.html
+++ b/app/scripts/directives/searchDirective/searchDirectiveTemplate.html
@@ -4,7 +4,7 @@
 
 		<div class="input-group" style="width:100%">
 			<span class="input-group-btn">
-				<button class="btn btn-default height20" ng-click="reset()" type="button">
+				<button class="btn btn-default {{searchHeight}}" ng-click="reset()" type="button">
 					<span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
 				</button>
 			</span>
