--- a/app/scripts/directives/graphDirective/graphDirectiveTemplate.html
+++ b/app/scripts/directives/graphDirective/graphDirectiveTemplate.html
@@ -1,5 +1,5 @@
 <div>
-	<div id="graph-overlay" style="position:absolute; z-index:10; background-color: white" ng-hide="{{graphPrepared}}">
+	<div id="graph-overlay" style="position:absolute; z-index:10; background-color: white" ng-show="atlasRunning">
 		<img id="loader" src="public/img/loader.gif"/>
 	</div>
 	<div id="graph-container">
