--- a/app/scripts/directives/searchDirective/searchDirectiveTemplate.html
+++ b/app/scripts/directives/searchDirective/searchDirectiveTemplate.html
@@ -20,7 +20,7 @@
 			<img ng-show="peddingQuery" id="query-loader" src="public/img/loader.gif"/>
 			
 			<select class="form-control" ng-options="item.value as item.label for item in monthFilter" ng-model="filter.month">
-				<option value='' disabled>- Izberi kvartar -</option>
+				<option value='' disabled>- Izberi četrtletje -</option>
 			</select>
 			
 			<select class="form-control" ng-options="item.value as item.value for item in yearFilter" ng-model="filter.year">
