--- a/app/scripts/directives/legendDirective/legendDirectiveTemplate.html
+++ b/app/scripts/directives/legendDirective/legendDirectiveTemplate.html
@@ -1,5 +1,5 @@
 <div>   
-    <div class="row" ng-hide="activeNode">
+    <div class="row" ng-hide="activeNode||tab2">
         <ul class="legend">
             <li ng-repeat="obj in legend track by $index" style="color: {{ obj.color }}" ng-click="showCategory($index)">
                 <span>{{ obj.name }}</span>
