--- a/app/scripts/directives/activeNodeDirective/activeNodeDirectiveTemplate.html
+++ b/app/scripts/directives/activeNodeDirective/activeNodeDirectiveTemplate.html
@@ -1,5 +1,13 @@
 <div>
-	<div class="row" ng-show="activeNode">
+	<div class="row">
+		<ul class="nav nav-tabs">
+			<li role="presentation" ng-class="{active: tabActivity[0]}"><a href ng-click="selectTab(1)">Kategorije</a></li>
+			<li role="presentation" class="tabActivity[1]"><a href ng-click="selectTab(2)">Statistika</a></li>
+		</ul>
+	</div>
+
+	<!-- Tab1 -->
+	<div class="row" ng-show="activeNode&&tab1">
 	    <a class="list-group-item active">
 	        {{ activeNode.label }} <span class="badge"> {{ neighbours.length }} </span>
 	    </a>
@@ -11,4 +19,10 @@
 	        </li>
 	    </ul>
 	</div>
+
+	<!-- Tab2 -->
+	<div class="row" ng-show="tab2">
+		nothing yet
+	</div>
+
 </div>
