--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="public/css/main.css">
     </head>
     <body>
-        
+
     <div ng-include="'app/template/navigation.html'"></div>
 
     <div class="container padding-top-20">
@@ -24,11 +24,11 @@
     </div>
     <!--</div>-->
 
-        <!-- <footer class="footer">
-            <div class="container">
-                <p class="footer-text">&copy vojf</p>
-            </div>
-        </footer> -->
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Place sticky footer content here.</p>
+      </div>
+    </footer>
     <script data-main="app/main" src="app/vendor/require.js"></script>
     </body>
 </html>
