--- a/index.html
+++ b/index.html
@@ -24,10 +24,26 @@
     </div>
     <!--</div>-->
 
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">Place sticky footer content here.</p>
-      </div>
+    <footer class="footer navbar-fixed-bottom">
+        <div class="container">
+
+            <div class="logo-footer pull-right">
+                <a href="http://www.mizs.gov.si/">
+                    <img src="public/img/footer1.png" alt="Ministrstvo za izobraževanje, znanost in šport" title="Ministrstvo za izobraževanje, znanost in šport">
+                </a>
+                <a href="http://www.sklad-kadri.si/">
+                    <img src="public/img/footer2.png" alt="Javni sklad republike Slovenije za razvoj kadrov in štipendije" title="Javni sklad republike Slovenije za razvoj kadrov in štipendije">
+                </a>
+                <a href="http://www.uni-lj.si/">
+                    <img src="public/img/footer3.png" alt="Univerza v Ljubljani" title="Univerza v Ljubljani">
+                </a>
+                <a href="http://www.eu-skladi.si/">
+                    <img src="public/img/footer4.png" alt="EU" title="EU">
+                </a>
+            </div>
+
+            <p class="text-muted">© 2015 PKP Vizualizacija omrežij in javnih financ</p>
+        </div>
     </footer>
     <script data-main="app/main" src="app/vendor/require.js"></script>
     </body>
