--- a/app/scripts/directives/legendDirective/legendDirectiveTemplate.html
+++ b/app/scripts/directives/legendDirective/legendDirectiveTemplate.html
@@ -1,7 +1,7 @@
 <div>   
     <div class="row" ng-hide="activeNode||tab2">
         <ul class="legend">
-            <li ng-repeat="obj in legend track by $index" style="color: {{ obj.color }}" ng-click="showCategory($index)">
+            <li ng-repeat="obj in legend track by $index" ng-style="{color: obj.color}" ng-click="showCategory($index)">
                 <span>{{ obj.name }}</span>
             </li>
         </ul>
