--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
 
-            <p class="text-muted">© 2015 PKP Vizualizacija omrežij in javnih financ</p>
+            <p class="text-muted">© 2015 <a href="https://github.com/Roky994/Vojf">PKP Vizualizacija omrežij in javnih financ</a></p>
         </div>
     </footer>
     <script data-main="app/main" src="app/vendor/require.js"></script>
